--- a/docassemble/USCISApplications/data/questions/screeners.yml
+++ b/docassemble/USCISApplications/data/questions/screeners.yml
@@ -204,6 +204,14 @@ subquestion: |
     </p>
   </div>
   % endif
+
+  <div class="alert alert-info" role="alert">
+    <h2 class="h4">Ask all questions on this page</h2>
+    <p>
+      When you have finished the screening questions for each applicant, a
+      supervisor will check your work and decide if each applicant can continue
+      or not.
+    </p>
 fields:
   - What country will you be applying for TPS from?: users[i].tps_application_country
     datatype: combobox
@@ -599,6 +607,20 @@ fields:
   - Supervisor notes: supervisor_notes
     required: False
     datatype: area
+---
+id: addenda for users i
+question: |
+  Review addenda for ${ users[i] }
+fields:
+  - Addenda: users[i].addenda
+    datatype: checkboxes
+    choices:
+      - Military service: military_service
+      - Transit through Central America: transit_through_ca
+      - Child of Venezuelan nationals: child_venezuelan_nationals
+      - Smuggling: smuggling
+      - Affidavit of continuous residence: continuous_residence
+      - EAD interim parole: ead_interim_parole
 ---
 code: |
   users[i].application_is_approved = supervisor_overall_approval_status == "approved" or (supervisor_overall_approval_status == "mixed" and users[i] in approved_applications)
