--- a/docassemble/USCISApplications/data/questions/screeners.yml
+++ b/docassemble/USCISApplications/data/questions/screeners.yml
@@ -27,16 +27,12 @@ fields:
       code: |
         users[i].age_in_years() > 13
   - First country you are a citizen of: users[i].countries_of_citizenship[0]
-    datatype: combobox
-    code: |
-      [next(iter(item.values())) for item in countries_list()]
+    code: uscis_countries_list()
     default: ${ users[i].country_of_birth }
   - Do you have citizenship in another country?: users[i].has_additional_citizenship
     datatype: yesnoradio
   - Second Country of Citizenship: users[i].countries_of_citizenship[1]
-    datatype: combobox
-    code: |
-      [next(iter(item.values())) for item in countries_list()]
+    code: uscis_countries_list()
     show if: users[i].has_additional_citizenship
   - note: |
       For now, if ${ users[i] } is a citizen of more countries than those listed above, get supervisor approval and handwrite the additional countries into the addendum pages after printing the application.
@@ -394,16 +390,12 @@ fields:
       and legal status in each country in the addendum or on form 821.
     show if: users[i].traveled_through_other_countries
   - First country you are a citizen of: users[i].countries_of_citizenship[0]
-    datatype: combobox
-    code: |
-      [next(iter(item.values())) for item in countries_list()]
+    code: uscis_countries_list()
     default: ${ users[i].country_of_birth }
   - Do you have citizenship in another country?: users[i].has_additional_citizenship
     datatype: yesnoradio
   - Second Country of Citizenship: users[i].countries_of_citizenship[1]
-    datatype: combobox
-    code: |
-      [next(iter(item.values())) for item in countries_list()]
+    code: uscis_countries_list()
     show if: users[i].has_additional_citizenship
   - note: |
       For now, if ${ users[i] } is a citizen of more countries than those listed above, get supervisor approval and handwrite the additional countries into the addendum pages after printing the application.
@@ -494,8 +486,8 @@ subquestion: |
             <li>Proof of birth country: ${ showifdef("user.proof_of_birthplace") }</li>
             % endif
             <li>One or both parents are Venezuelan nationals: ${ 'Yes' if showifdef("user.parents_from_venezuela") else 'No' }</li>
-            % if showifdef("user.parents_from_venezuela") and not user.proof_of_parent_birthplace:
-            <li style="background-color: #ffff00; color: #000;"><i class="fas fa-exclamation-triangle"></i> ${ user } was not born in Venezuela but their parents were. Yet they do not have proof.</li>
+            % if not ("venezuela" in user.country_of_birth.lower()) and (showifdef("user.parents_from_venezuela") and not user.proof_of_parent_birthplace):
+            <li style="background-color: #ffff00; color: #000;"><i class="fas fa-exclamation-triangle"></i>Does not have proof of parents birthplace.</li>
             % else:
             <li>Has proof of parents' birthplace: ${ showifdef("user.proof_of_parent_birthplace") }</li>
             % endif
