Add a restart button

--- a/docassemble/USCISApplications/data/questions/aiw.yml
+++ b/docassemble/USCISApplications/data/questions/aiw.yml
@@ -11,8 +11,14 @@ attachment:
       - "users1_name_first": ${ users[i].name.first }
       - "users1_name_middle": ${ users[i].name.middle }
       - "users1_name_last": ${ users[i].name.last }
-      - "users1_aliases1": ${ users[i].aliases.item(0) }
-      - "users1_aliases2": ${ users[i].aliases.item(1) }
+      - "users1_aliases1": |
+          % if showifdef("users[i].aliases") and len(users[i].aliases.elements) > 0:
+          ${ users[i].aliases.item(0) }
+          % endif
+      - "users1_aliases2": |
+          % if showifdef("users[i].aliases") and len(users[i].aliases.elements) > 1:
+          ${ users[i].aliases.item(1) }
+          % endif
       - "users1_birthdate": ${ users[i].birthdate }
       - "country_of_citizenship": ${ users[i].country_of_birth }
       - "country_of_birth": ${ users[i].country_of_birth }
