--- a/docassemble/USCISApplications/data/questions/combined_application_questions.yml
+++ b/docassemble/USCISApplications/data/questions/combined_application_questions.yml
@@ -440,14 +440,18 @@ subquestion: |
   You must list all passport numbers, even if expired. Start with the most
   recent.
 fields:
+  - Do you have a passport?: users[i].has_passport
+    datatype: yesnoradio
   - Passport number (if any): users[i].passport_number
     maxlength: 38
     required: false
+    show if: users[i].has_passport
   - What country issued your most recent passport: users[i].passport_issuing_country
     code: |
       uscis_countries_list()
     default: |
       ${ users[i].country_of_birth }
+    show if: users[i].has_passport
   - Other travel document number (if any): users[i].other_travel_document_number
     required: false
   - What is the expiration date of your most recent passport or travel document?: users[i].passport_expiration_date
@@ -467,10 +471,10 @@ question: |
 subquestion: |
   Tap "add another" to list another travel document.
 
-  % if users[i].passport_number or users[i].other_travel_document_number:
+  % if (users[i].has_passport and users[i].passport_number) or users[i].other_travel_document_number:
   You have already told us about the following travel documents:
 
-  % if users[i].passport_number:
+  % if users[i].has_passport and users[i].passport_number:
   * ${ users[i].passport_number }
   % endif
   % if users[i].other_travel_document_number:
@@ -1800,14 +1804,20 @@ attachment:
     - "state_of_entry": ${ users[i].state_of_entry }
     - "i94_arrival_number": ${ users[i].i94_arrival_number }
     - "authorized_stay_ending_date": ${ users[i].authorized_stay_ending_date }
-    - "passport_number": ${ users[i].passport_number }
-    - "most_recent_passport_country_issuing": ${ users[i].passport_issuing_country }
+    - "passport_number": |
+        % if users[i].has_passport:
+        ${ users[i].passport_number }
+        % endif
+    - "most_recent_passport_country_issuing": |
+        % if users[i].has_passport:
+        ${ users[i].passport_issuing_country }
+        % endif
     - "passport_or_travel_document_expiration_date": ${ users[i].passport_expiration_date.format('MM/dd/yyyy') }
     - "travel_document_number": ${ users[i].other_travel_document_number }
     - "additional_passport_number_1": ${ users[i].travel_documents.item(0) }
     - "additional_passport_number_2": ${ users[i].travel_documents.item(1) }
-    - "ethnicity_hispanic_yes": ${ users[i].ethnicity == "Hispanic or Latino" }
-    - "ethnicity_hispanic_no": ${ not users[i].ethnicity == "Hispanic or Latino" }
+    - "ethnicity_hispanic_yes": ${ users[i].ethnicity.lower() == "hispanic" }
+    - "ethnicity_hispanic_no": ${ users[i].ethnicity.lower() == "not_hispanic" }
     - "race_white": ${ users[i].race['white'] }
     - "race_asian": ${ users[i].race['asian'] }
     - "race_black": ${ users[i].race['black'] }
@@ -2027,13 +2037,28 @@ attachment:
     - "q20b_no": ${ not users[i].q20b }
     - "q28_yes": ${ users[i].q28 }
     - "q28_no": ${ not users[i].q28 }
-    - "q20c_yes": ${ users[i].q20c }
-    - "q20c_no": ${ not users[i].q20c }
+    - "q20c_yes": |
+        % if users[i].q2a or users[i].20b:
+        ${ users[i].q20c }
+        % endif
+    - "q20c_no": |
+        % if users[i].q2a or users[i].20b:
+        ${ not users[i].q20c }
+        % if users[i].q2a or users[i].20b:
+    - "q20d_yes": |
+        % if users[i].q2a or users[i].20b:
+        ${ users[i].q20d }
+        % endif
+    - "q20d_no": |
+        % if users[i].q2a or users[i].20b:
+        ${ users[i].q20d == False }
+        % endif
+    - "q20d_idk": |
+        % if users[i].q2a or users[i].20b:
+        ${ users[i].q20d is None }
+        % endif
     - "q29_yes": ${ users[i].q29 }
     - "q29_no": ${ not users[i].q29 }
-    - "q20d_yes": ${ users[i].q20d }
-    - "q20d_no": ${ users[i].q20d == False }
-    - "q20d_idk": ${ users[i].q20d is None }
     - "q30a_yes": ${ users[i].q30a }
     - "q30a_no": ${ not users[i].q30a }
     - "q20e_yes": ${ users[i].q20e }
@@ -2254,7 +2279,10 @@ attachment:
     - "country_of_birth": ${ users[i].country_of_birth }
     - "users1_birthdate": ${ users[i].birthdate.format('MM/dd/yyyy') }
     - "i94_arrival_number": ${ users[i].i94_arrival_number }
-    - "passport_number": ${ users[i].passport_number }
+    - "passport_number": |
+        % if users[i].has_passport:
+        ${ users[i].passport_number }
+        % endif
     - "travel_document_number": ${ users[i].other_travel_document_number }
     - "passport_country_of_issue": ${ users[i].passport_issuing_country }
     - "passport_expiration_date": ${ users[i].passport_expiration_date.format('MM/dd/yyyy') }
